Add body documentation //TODO: we need to indentify why we couldnt fix it with arrays
