# swagger.json
@@ -4,214 +4,7 @@
         "http"
     ],
     "paths": {
-        "/v1/testcontroller/meetupjs": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [],
-                "tags": [
-                    "testcontroller"
-                ]
-            }
-        },
-        "/v1/testcontroller/queryparam/:id": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "type": "string",
-                        "description": ""
-                    }
-                ],
-                "tags": [
-                    "testcontroller"
-                ]
-            }
-        },
-        "/v1/testcontroller/testinguy/:name": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "name",
-                        "in": "path",
-                        "required": true,
-                        "type": "string",
-                        "description": ""
-                    }
-                ],
-                "tags": [
-                    "testcontroller"
-                ]
-            }
-        },
-        "/v1/testcontroller/getAction/:id/:id2/:id3": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "id3",
-                        "in": "path",
-                        "required": true,
-                        "type": "string",
-                        "description": ""
-                    },
-                    {
-                        "name": "id2",
-                        "in": "path",
-                        "required": true,
-                        "type": "string",
-                        "description": ""
-                    },
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "type": "string",
-                        "description": ""
-                    }
-                ],
-                "tags": [
-                    "testcontroller"
-                ]
-            }
-        },
-        "/v1/testcontroller/getActionWithoutParam": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [],
-                "tags": [
-                    "testcontroller"
-                ]
-            }
-        },
-        "/v1/testcontroller/postAction/:id": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "type": "string",
-                        "description": ""
-                    }
-                ],
-                "tags": [
-                    "testcontroller"
-                ]
-            },
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "type": "string",
-                        "description": ""
-                    }
-                ],
-                "tags": [
-                    "testcontroller"
-                ]
-            }
-        },
-        "/v1/testcontroller/testHeaders": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [],
-                "tags": [
-                    "testcontroller"
-                ]
-            }
-        },
-        "/v1/testcontroller2/getAction": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [],
-                "tags": [
-                    "testcontroller2"
-                ]
-            }
-        },
-        "/v1/testcontroller2/postAction/:param1/:param2": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "param2",
-                        "in": "path",
-                        "required": true,
-                        "type": "string",
-                        "description": ""
-                    },
-                    {
-                        "name": "param1",
-                        "in": "path",
-                        "required": true,
-                        "type": "string",
-                        "description": ""
-                    }
-                ],
-                "tags": [
-                    "testcontroller2"
-                ]
-            }
-        },
-        "/v1/user": {
+        "/v1/user/login": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -222,9 +15,65 @@
                 "parameters": [],
                 "tags": [
                     "user"
-                ]
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/User"
+                            }
+                        }
+                    },
+                    "description": "User",
+                    "required": true
+                }
             }
         }
     },
-    "swagger": "2.0"
+    "openapi": "3.0.0",
+    "components": {
+        "schemas": {
+            "AddressModel": {
+                "properties": {
+                    "street": {
+                        "type": "string"
+                    },
+                    "number": {
+                        "type": "number"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "street",
+                    "number"
+                ]
+            },
+            "User": {
+                "properties": {
+                    "name": {
+                        "type": "string"
+                    },
+                    "lastname": {
+                        "type": "string"
+                    },
+                    "age": {
+                        "type": "number"
+                    },
+                    "address": {
+                        "items": {
+                            "$ref": "#/components/schemasArray"
+                        },
+                        "type": "array"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "name",
+                    "lastname",
+                    "age",
+                    "address"
+                ]
+            }
+        }
+    }
 }
